--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ bld/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
+/Scripts
 # Visual Studio 2017 auto generated files
 Generated\ Files/
 
