--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,9 @@ bld/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
+
 /Scripts
+Scripts
 /Scripts/
 
 # Visual Studio 2017 auto generated files
