--- a/CarManagmentSystem/CarManagmentSystem.csproj
+++ b/CarManagmentSystem/CarManagmentSystem.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Controllers\CarShopController.cs" />
     <Compile Include="Controllers\DataController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\StoresController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -209,8 +210,13 @@
     <Compile Include="Migrations\202401031749378_Price.designer.cs">
       <DependentUpon>202401031749378_Price.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202401151922411_storesData.cs" />
+    <Compile Include="Migrations\202401151922411_storesData.designer.cs">
+      <DependentUpon>202401151922411_storesData.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Cars.cs" />
+    <Compile Include="Models\StoresData.cs" />
     <Compile Include="MyDatabase\DataContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -276,6 +282,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Stores\" />
     <Folder Include="Views\Todo\" />
   </ItemGroup>
   <ItemGroup>
@@ -311,6 +318,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202401031749378_Price.resx">
       <DependentUpon>202401031749378_Price.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202401151922411_storesData.resx">
+      <DependentUpon>202401151922411_storesData.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
